--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,11 @@ server:
   port: 8080
 
 
+#spring:
+#  security:
+#    filter:
+#      order: 100
+
 hmac-verify:
   header:
     nonce: nonce
@@ -10,3 +15,4 @@ hmac-verify:
     authorization: authorization
   access-key: f9ecb7d7-f5e5-40e1-bc9b-6b5e4ed6cfe0
   secret-key: f9ecb7d7-f5e5-40e1-bc9b-6b5e4ed6cfe0
+
