--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,4 +15,12 @@ hmac-verify:
     authorization: authorization
   access-key: f9ecb7d7-f5e5-40e1-bc9b-6b5e4ed6cfe0
   secret-key: f9ecb7d7-f5e5-40e1-bc9b-6b5e4ed6cfe0
-
+logging:
+  level:
+    io:
+      github:
+        qyvlik:
+          springhmacrestverify:
+            modules:
+              verify:
+                interceptor: DEBUG
