--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,11 @@ hmac-verify:
     nonce: nonce
     access-key: accesskey
     authorization: authorization
+  server:
+    scheme: http
+    host: localhost
+    port: 8080
+
   access-key: f9ecb7d7-f5e5-40e1-bc9b-6b5e4ed6cfe0
   secret-key: f9ecb7d7-f5e5-40e1-bc9b-6b5e4ed6cfe0
 logging:
